fix squished expanded images

--- a/files/assets/css/main.css
+++ b/files/assets/css/main.css
@@ -6858,7 +6858,6 @@ div.markdown {
 	#desktop-expanded-image {
 		max-width: 100%;
 		max-height: 65vh;
-		width: 100%;
 	}
 }
 
